# prism

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  plan.md  run.sh  skills-lock.json
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  db.py  llm_client.py  main.py  ollama_client.py
backend/src/agents/: __init__.py  citation_agent.py  coverage_agent.py  dependency_agent.py  llm.py  orchestrator.py  prompts.py  result.py  retrieval_agent.py  risk_effort_agent.py  router_agent.py  schemas.py  state_codec.py  step_callbacks.py
backend/src/api/: catalog_routes.py  chat.py  routes.py  streaming.py
backend/src/catalog/: __init__.py  base_repo.py  models.py  org_repo.py  schema.py  service_repo.py  source_repo.py  team_repo.py
backend/src/connectors/: __init__.py  base.py  excel.py  gitlab.py  gitlab_api.py  onenote.py  sharepoint.py
backend/src/ingestion/: __init__.py  analysis_store.py  chunker.py  deduplicator.py  embedder.py  entity_extractor.py  graph_builder.py  indexer.py  knowledge_store.py  parser.py  pipeline.py  registry.py  team_names.py
backend/src/models/: __init__.py  chunk.py  document.py  report.py
backend/src/observability/: logging.py
backend/src/retrieval/: __init__.py  graph_search.py  hybrid_search.py  knowledge_queries.py  query_expansion.py  reranker.py
backend/tests/: test_api.py  test_catalog.py  test_chat.py  test_chunker.py  test_connectors.py  test_deduplicator.py  test_entity_extractor.py  test_hybrid_search.py  test_orchestrator.py  test_parser.py  test_prompt_safety.py  test_report_models.py
(+281 files in other folders)
