[project]
name = "prism-backend"
version = "0.1.0"
description = "PRISM - Platform-aware Requirement Intelligence and Service Mapping"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "opensearch-py>=2.7.0",
    "neo4j>=5.25.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "ollama>=0.4.0",
    "sentence-transformers>=3.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.25.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "beautifulsoup4>=4.12.0",
    "datasketch>=1.6.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
prism-api = "src.main:run"
prism-ingest = "scripts.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
